--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -76,3 +76,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ant-tabs-tab {
+  color: grey !important;
+
+  font-size: 16px !important;
+}
+
+.ant-tabs-ink-bar {
+  background-color: white !important;
+}
+
+.ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: white !important;
+}
