--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -93,13 +93,18 @@
   }
 }
 
-.star {
-  position: absolute;
-  width: 3px;
-  height: 3px;
-  background-color: white;
-  box-shadow: 0 0 6px 1px rgba(255, 255, 255, 0.35) !important;
-  opacity: 0;
-  transition: opacity 1s;
-  z-index: -1;
+/* https://stackoverflow.com/questions/72636816/scroll-to-bottom-when-new-message-added */
+.scroller {
+  overflow: auto;
+  /* height: 100px; */
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-anchor: auto !important; /*  See https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-anchor */
+}
+
+.scroller .scroller-content .item {
+  height: 20px;
+  transform: translateZ(
+    0
+  ); /* fixes a bug in Safari iOS where the scroller doesn't update */
 }
