--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -37,16 +37,16 @@
   }
 
   .dark {
-    --background: 240 15.4% 5.1%;
-    --foreground: 210 40% 98%;
+    --background: 30 30% 5.1%;
+    --foreground: 32 100% 92%;
 
     --muted: 240, 4%, 16%;
-    --muted-foreground: 240, 5%, 65%;
+    --muted-foreground: 28, 52%, 65%;
 
     --popover: 0 0% 0%;
     --popover-foreground: 210 40% 98%;
 
-    --card: 222.2 84% 4.9%;
+    --card: 220 10% 5.1%;
     --card-foreground: 210 40% 98%;
 
     --border: 240, 4%, 16%;
@@ -59,9 +59,7 @@
     --secondary-foreground: 210 40% 98%;
 
     --accent: 240, 4%, 16%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
+    --accent-foreground: 210 40% 98% --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
 
     --ring: 240, 4%, 16%;
